eclipse warnings, checkstyle
Former-commit-id: d7499246dfe0ed36f91c52a914da6fa057270ff5